L10n: Add traditional russian

--- a/locales/list.yml
+++ b/locales/list.yml
@@ -14,6 +14,11 @@ list:
     name: "Ukrainian"
     native_name: "Україньска"
     author: "Andrej Lenťaj, Maxim Hrabovi (dechioyo) and Kirill (mbsoft)"
+  - code: "ru_old"
+    flag: "ru_old"
+    name: "Traditional russian"
+    native_name: "Традиционный русский"
+    author: "Mikitko Wiśniewski (rudzik8)"
   - code: "by"
     flag: "by"
     name: "Belarussian"
