L10n: Add traditional russian

--- a/locales/list.yml
+++ b/locales/list.yml
@@ -4,6 +4,11 @@ list:
     name: "Russian"
     native_name: "Русский"
     author: "OpenVK Team"
+  - code: "ru_old"
+    flag: "ru_old"
+    name: "Traditional russian"
+    native_name: "Традицiонный русскiй"
+    author: "Mikitko Wiśniewski (rudzik8)"
   - code: "en"
     flag: "us"
     name: "English"
