L10n: Update pre-revolutionary (traditional russian)
update sidebar translate, move language to bottom of the list.yml and update name (traditional -> pre-revolutionary)

--- a/locales/list.yml
+++ b/locales/list.yml
@@ -4,11 +4,6 @@ list:
     name: "Russian"
     native_name: "Русский"
     author: "OpenVK Team"
-  - code: "ru_old"
-    flag: "ru_old"
-    name: "Traditional russian"
-    native_name: "Традицiонный русскiй"
-    author: "Mikitko Wiśniewski (rudzik8)"
   - code: "en"
     flag: "us"
     name: "English"
@@ -64,4 +59,9 @@ list:
     name: "Kazakh"
     native_name: "Қазақша"
     author: "ayaao.p"
+  - code: "ru_old"
+    flag: "ru_old"
+    name: "Pre-revolutionary"
+    native_name: "Дореволюцiонный"
+    author: "Mikitko Wiśniewski (rudzik8)"
 
