--- a/locales/ru_old.strings
+++ b/locales/ru_old.strings
@@ -309,14 +309,14 @@
 /* Menus */
 
 "edit_button" = "ред.";
-"my_page" = "Моя Страница";
-"my_friends" = "Мои Друзья";
-"my_photos" = "Мои Фотографіи";
-"my_videos" = "Мои Видеозаписи";
-"my_messages" = "Мои Сообщенія";
+"my_page" = "Мой Паспортъ";
+"my_friends" = "Мои Знакомцы";
+"my_photos" = "Мои Фотокарточки";
+"my_videos" = "Мой Синематографъ";
+"my_messages" = "Мои Письма";
 "my_notes" = "Мои ​Заметки";
-"my_groups" = "Мои Группы";
-"my_feed" = "Мои Новости";
+"my_groups" = "Мои Общества";
+"my_feed" = "Мои Извѣстiя";
 "my_feedback" = "Мои Отвѣты";
 "my_settings" = "Мои Настройки";
 "bug_tracker" = "​Багъ-​трекеръ";
