--- a/locales/ru_old.strings
+++ b/locales/ru_old.strings
@@ -1,5 +1,6 @@
 "__locale" = "ru_UA.utf8;ru_RU.UTF-8;Rus";
 "__WinEncoding" = "Windows-1251";
+"__fallback" = "ru";
 
 /* Check for https://www.unicode.org/cldr/charts/latest/supplemental/language_plural_rules.html */
 
