Esperanto localization added

--- a/locales/list.yml
+++ b/locales/list.yml
@@ -59,9 +59,8 @@ list:
     name: "Kazakh"
     native_name: "Қазақша"
     author: "ayaao.p"
-  - code: "ru_old"
-    flag: "ru_old"
-    name: "Pre-revolutionary"
-    native_name: "Дореволюцiонный"
-    author: "Mikitko Wiśniewski (rudzik8)"
-
+  - code: "eo"
+    flag: "eo"
+    name: "Esperanto"
+    native_name: "Эсперанто"
+    author: "n1rwana"
