--- a/locales/list.yml
+++ b/locales/list.yml
@@ -59,6 +59,11 @@ list:
     name: "Kazakh"
     native_name: "Қазақша"
     author: "ayaao.p"
+  - code: "ru_old"
+    flag: "ru_old"
+    name: "Pre-revolutionary"
+    native_name: "Дореволюцiонный"
+    author: "Mikitko Wiśniewski (rudzik8)"
   - code: "eo"
     flag: "eo"
     name: "Esperanto"
