Now all the lines have been translated and all the conversations have been corrected.

--- a/locales/list.yml
+++ b/locales/list.yml
@@ -67,5 +67,5 @@ list:
   - code: "eo"
     flag: "eo"
     name: "Esperanto"
-    native_name: "Эсперанто"
+    native_name: "Esperanto"
     author: "n1rwana"
