--- a/locales/eo.strings
+++ b/locales/eo.strings
@@ -1,5 +1,4 @@
-"__locale" = "eo_EO.utf8;eo_EO.UTF-8;Esp";
-"__WinEncoding" = "Windows-1251";
+"__locale" = "eo.utf8";
 
 /* Check for https://www.unicode.org/cldr/charts/latest/supplemental/language_plural_rules.html */
 
@@ -32,7 +31,7 @@
 "male" = "vira";
 "female" = "ino";
 "description" = "Priskribo";
-"save" = "Savi";
+"save" = "Konservi ";
 "main_information" = "Ĉefaj informoj";
 "nickname" = "Kromnomo";
 "online" = "Enreta";
@@ -48,9 +47,9 @@
 "none" = "neniu";
 "send" = "Sendi";
 
-"years_zero" = "0 jaro malnova";
-"years_one" = "1 jaro malnova";
-"years_other" = "$1 jaroj malnova";
+"years_zero" = "0 jara";
+"years_one" = "1 jara";
+"years_other" = "$1 jara";
 
 "relationship" = "Rilato";
 
@@ -73,18 +72,18 @@
 "politViews_4" = "Moderulo";
 "politViews_5" = "Liberalulo";
 "politViews_6" = "Konservativa";
-"politViews_7" = "Monarchical";
+"politViews_7" = "Monarĥo";
 "politViews_8" = "Ultra-Konservativa";
 "politViews_9" = "Libervolisma";
 
-"contact_information" = "Contact information";
+"contact_information" = "Kontakt-informoj";
 
-"email" = "Email";
-"phone" = "Phone";
+"email" = "Retpoŝto";
+"phone" = "Telefono";
 "telegram" = "Telegram";
-"personal_website" = "Personal website";
-"city" = "City";
-"address" = "Address";
+"personal_website" = "Persona retejo";
+"city" = "Urbo";
+"address" = "Adreso";
 
 "personal_information" = "Persona informo";
 
@@ -121,6 +120,8 @@
 "x_out_of" = "$1 el";
 "wall_zero" = "neniuj afiŝoj";
 "wall_one" = "$1 afiŝo";
+"wall_few" = "$1 rekordoj";
+"wall_many" = "$1 rekordoj";
 "wall_other" = "$1 afiŝoj";
 "publish_post" = "Aldonu afiŝon";
 "view_other_comments" = "Rigardu aliajn komentojn";
@@ -142,7 +143,7 @@
 "no_posts_abstract" = "Neniu skribis ion ĉi tie... Ĝis nun.";
 "attach_no_longer_available" = "Ĉi tiu aldonaĵo ne plu disponeblas.";
 "open_post" = "Open post";
-"version_incompatibility" = "Ĉi tiu aldonaĵo ne povis esti montrata. Verŝajne la datumbazo estas nekongrua kun la nuna versio de OpenVK.";
+"version_incompatibility" = "Ĉi tiu aldonaĵo ne povis esti montrata. Verŝajne la datumbazo estas nekongrua kun la nuna versio de la OpenVK.";
 
 /* Friends */
 
@@ -160,14 +161,20 @@
 
 "firends_zero" = "Neniuj amikoj";
 "friends_one" = "$1 amiko";
+"friends_few" = "$1 amikoj";
+"friends_many" = "$1 amikoj";
 "friends_other" = "$1 amikoj";
 
 "followers_zero" = "Neniuj sekvantoj";
 "followers_one" = "$1 sekvanto";
+"followers_few" = "$1 sekvantoj";
+"followers_many" = "$1 sekvantoj";
 "followers_other" = "$1 sekvantoj";
 
 "subscriptions_zero" = "Neniuj abonoj";
 "subscriptions_one" = "$1 abono";
+"subscriptions_few" = "$1 abonoj";
+"subscriptions_many" = "$1 abonoj";
 "subscriptions_other" = "$1 abonoj";
 
 /* Group */
@@ -197,6 +204,7 @@
 "managed" = "Administrita";
 
 "administrators_one" = "$1 administranto";
+"administrators_few" = "$1 administrantoj";
 "administrators_other" = "$1 administrantoj";
 
 "role" = "Rolo";
@@ -215,14 +223,20 @@
 
 "participants_zero" = "Neniuj partoprenantoj";
 "participants_one" = "$1 partoprenanto";
+"participants_few" = "$1 partoprenantoj";
+"participants_many" = "$1 partoprenantoj";
 "participants_other" = "$1 partoprenantoj";
 
 "groups_zero" = "Neniuj grupoj";
 "groups_one" = "$1 grupo";
+"groups_few" = "$1 grupoj";
+"groups_many" = "$1 grupoj";
 "groups_other" = "$1 grupoj";
 
 "meetings_zero" = "Neniuj kunvenoj";
 "meetings_one" = "$1 kunveno";
+"meetings_few" = "$1 kunvenoj";
+"meetings_many" = "$1 kunvenoj";
 "meetings_other" = "$1 kunvenoj";
 
 /* Albums */
@@ -234,7 +248,7 @@
 "creating_album" = "Kreante albumon";
 "upload_photo" = "Alŝutu foton";
 "photo" = "Foto";
-"upload_button" = "Alŝutu";
+"upload_button" = "Alŝuti";
 
 "open_original" = "Malfermu originalon";
 
@@ -243,6 +257,8 @@
 
 "albums_zero" = "Neniuj albumoj";
 "albums_one" = "$1 albumo";
+"albums_few" = "$1 albumoj";
+"albums_many" = "$1 albumoj";
 "albums_other" = "$1 albumoj";
 
 /* Notes */
@@ -256,13 +272,15 @@
 
 "notes_zero" = "Neniuj notoj";
 "notes_one" = "$1 noto";
+"notes_few" = "$1 notoj";
+"notes_many" = "$1 notoj";
 "notes_other" = "$1 notoj";
 
 /* Menus */
 
 /* Note that is string need to fit into the "My Page" link */
 
-"edit_button" = "redakti";
+"edit_button" = "red.";
 "my_page" = "Mia Paĝo";
 "my_friends" = "Miaj Amikoj";
 "my_photos" = "Miaj Fotoj";
@@ -480,6 +498,8 @@
 "gifts" = "Donacoj";
 "gifts_zero" = "Nulaj donacoj";
 "gifts_one" = "Unu donaco";
+"gifts_few" = "$1 donacoj";
+"gifts_many" = "$1 donacoj";
 "gifts_other" = "$1 gifts";
 "gifts_left" = "Restas donacoj: $1";
 "gifts_left_zero" = "Restas nulaj donacoj";
@@ -498,6 +518,8 @@
 "coins" = "Voĉdonoj";
 "coins_zero" = "0 voĉdono";
 "coins_one" = "Unu voĉdono";
+"coins_few" = "$1 voĉoj";
+"coins_many" = "$1 voĉoj";
 "coins_other" = "$1 voĉoj";
 
 "users_gifts" = "Donacoj";
@@ -568,12 +590,6 @@
 "manage_user_action" = "Administri uzanton";
 "ban_user_action" = "Uzanto malpermeso";
 "warn_user_action" = "Averti uzanto";
-
-/* Paginator (deprecated) */
-
-"paginator_back" = "Reen";
-"paginator_page" = "Paĝo $1";
-"paginator_next" = "Venonta";
 
 /* Dialogs */
 
