--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -583,6 +583,9 @@
 "support_bad_answer_user" = "Вы оставили негативный отзыв.";
 "support_good_answer_agent" = "Пользователь оставил положительный отзыв";
 "support_bad_answer_agent" = "Пользователь оставил негативный отзыв";
+"support_rated_good" = "Вы оставили положительный отзыв об ответе.";
+"support_rated_bad" = "Вы оставили негативный отзыв об ответе.";
+"wrong_parameters" = "Неверные параметры запроса.";
 
 "comment" = "Комментарий";
 "sender" = "Отправитель";
