--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -127,6 +127,9 @@
 
 "updated_at" = "Обновлено $1";
 
+"user_banned" = "К сожалению, нам пришлось заблокировать страницу пользователя <b>$1</b>.";
+"user_banned_comment" = "Комментарий модератора:";
+
 /* Wall */
 
 "feed" = "Новости";
@@ -323,6 +326,9 @@
 "menu_login" = "Вход";
 "menu_registration" = "Регистрация";
 "menu_help" = "Помощь";
+
+"menu_logout" = "Выйти";
+"menu_support" = "Поддержка";
 
 "header_home" = "главная";
 "header_groups" = "группы";
@@ -589,9 +595,19 @@
 "ticket_changed_comment" = "Изменения вступят силу через несколько секунд.";
 
 /* Invite */
+
 "invite" = "Пригласить";
 "you_can_invite" = "Вы можете пригласить своих друзей или знакомых в сеть с помощью индивидуальной ссылки:";
 "you_can_invite_2" = "Приложите эту ссылку к вашему сообщению. Пользователь зарегистрируется, и он сразу появится у вас в друзьях.";
+
+/* Banned */
+
+"banned_title" = "Вам бан";
+"banned_header" = "Вы были верискокнуты";
+"banned_alt" = "Пользователь заблокирован.";
+"banned_1" = "Извините, <b>$1</b>, но вы были верискокнуты.";
+"banned_2" = "А причина этому проста: <b>$1</b>. К сожалению, на этот раз нам пришлось заблокировать вас навсегда.";
+"banned_3" = "Вы всё ещё можете <a href=\"/support?act=new\">написать в службу поддержки</a>, если считаете что произошла ошибка или <a href=\"/logout?hash=$1\">выйти</a>.";
 
 /* Errors */
 
