--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -171,7 +171,10 @@
 "contains_nsfw" = "Содержит NSFW-контент";
 "nsfw_warning" = "Данный пост может содержать 18+ контент";
 "report" = "Пожаловаться";
+"attach" = "Прикрепить";
 "attach_photo" = "Прикрепить фото";
+"attach_video" = "Прикрепить видео";
+"draw_graffiti" = "Нарисовать граффити";
 "no_posts_abstract" = "Здесь никто ничего не написал... Пока.";
 "attach_no_longer_available" = "Это вложение больше недоступно.";
 "open_post" = "Открыть запись";
