--- a/locales/en.strings
+++ b/locales/en.strings
@@ -554,12 +554,12 @@
 
 "support_rate_good_answer" = "This is good answer";
 "support_rate_bad_answer" = "This is bad answer";
-"support_good_answer_user" = "You have left a positive feedback.";
-"support_bad_answer_user" = "You have left a negative feedback.";
+"support_good_answer_user" = "You left a positive feedback.";
+"support_bad_answer_user" = "You left a negative feedback.";
 "support_good_answer_agent" = "User left a positive feedback.";
 "support_bad_answer_agent" = "User left a negative feedback.";
-"support_rated_good" = "You have left a positive feedback about the answer.";
-"support_rated_bad" = "You have left a negative feedback about the answer.";
+"support_rated_good" = "You left a positive feedback about the answer.";
+"support_rated_bad" = "You left a negative feedback about the answer.";
 "wrong_parameters" = "Invalid request parameters.";
 
 "comment" = "Comment";
