--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -590,6 +590,16 @@
 "support_new_title" = "Введите тему вашего обращения";
 "support_new_content" = "Опишите проблему или предложение";
 
+"support_rate_good_answer" = "Это хороший ответ";
+"support_rate_bad_answer" = "Это плохой ответ";
+"support_good_answer_user" = "Вы оставили положительный отзыв.";
+"support_bad_answer_user" = "Вы оставили негативный отзыв.";
+"support_good_answer_agent" = "Пользователь оставил положительный отзыв";
+"support_bad_answer_agent" = "Пользователь оставил негативный отзыв";
+"support_rated_good" = "Вы оставили положительный отзыв об ответе.";
+"support_rated_bad" = "Вы оставили негативный отзыв об ответе.";
+"wrong_parameters" = "Неверные параметры запроса.";
+
 "comment" = "Комментарий";
 "sender" = "Отправитель";
 
