--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -681,6 +681,7 @@
 "no" = "Нет";
 "cancel" = "Отмена";
 "edit_action" = "Изменить";
+"transfer" = "Передать";
 
 "warning" = "Внимание";
 "question_confirm" = "Это действие нельзя отменить. Вы действительно уверены в том что хотите сделать?";
