--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -247,6 +247,7 @@
 "role" = "Роль";
 "administrator" = "Администратор";
 "promote_to_admin" = "Повысить до администратора";
+"promote_to_owner" = "Назначить владельцем";
 "devote" = "Разжаловать";
 "set_comment" = "Изменить комментарий";
 "hidden_yes" = "Скрыт: Да";
@@ -257,6 +258,10 @@
 "group_display_only_creator" = "Отображать только создателя группы";
 "group_display_all_administrators" = "Отображать всех администраторов";
 "group_dont_display_administrators_list" = "Ничего не отображать";
+
+"group_changeowner_modal_title" = "Передача прав владельца";
+"group_changeowner_modal_text" = "Внимание! Вы передаёте права владельца пользователю $1. Это действие необратимо. После передави вы останетесь адмиинстратором, но сможете легко перестать им быть.";
+"group_owner_setted" = "Новый владелец ($1) успешно назначен в сообщество $2. Вам выданы права администратора в сообществе. Если Вы хотите вернуть роль владельца, обратитесь в <a href='/support?act=new'>техническую поддержку сайта</a>.";
 
 "participants_zero" = "Ни одного участника";
 "participants_one" = "Один участник";
@@ -754,6 +759,7 @@
 "no" = "Нет";
 "cancel" = "Отмена";
 "edit_action" = "Изменить";
+"transfer" = "Передать";
 
 "warning" = "Внимание";
 "question_confirm" = "Это действие нельзя отменить. Вы действительно уверены в том что хотите сделать?";
