Global: Move link to the donation page to left menu Previously, the link to donate in the header when the Russian language was turned on took up too much space. Because of this, after adding a link to the invitation, the links in the header became too large and began to look not very nice. Also this link can now be easily disabled

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -324,7 +324,6 @@
 
 "header_home" = "home";
 "header_groups" = "groups";
-"header_donate" = "donate";
 "header_people" = "people";
 "header_invite" = "invite";
 "header_help" = "help";
@@ -333,6 +332,8 @@
 
 "header_login" = "login";
 "header_registration" = "registration";
+
+"left_menu_donate" = "Donate";
 
 "footer_blog" = "blog";
 "footer_help" = "help";
