Translate comment reply button text

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -179,6 +179,8 @@
 "open_post" = "Open post";
 "version_incompatibility" = "This attachment could not be displayed. Probably the database is incompatible with the current version of OpenVK.";
 
+"reply" = "Reply";
+
 /* Friends */
 
 "friends" = "Friends";
