--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -182,6 +182,8 @@
 "open_post" = "Открыть запись";
 "version_incompatibility" = "Не удалось отобразить это вложение. Возможно, база данных несовместима с текущей версией OpenVK.";
 
+"reply" = "Ответить";
+
 /* Friends */
 
 "friends" = "Друзья";
