L18n: Set fallback languages for locales Russian as fallback for cyrillic locales and English for other ones

--- a/locales/am.strings
+++ b/locales/am.strings
@@ -1,5 +1,6 @@
 "__locale" = "hy_AM.utf8;hy_AM.UTF-8;Arm";
 "__WinEncoding" = "Windows-1251";
+"__fallback" = "en";
 
 /* Check for https://www.unicode.org/cldr/charts/latest/supplemental/language_plural_rules.html */
 
