--- a/locales/by.strings
+++ b/locales/by.strings
@@ -1,4 +1,5 @@
 "__locale" = "be_BY.UTF-8;Bel";
+"__fallback" = "ru";
 
 /* Check for https://www.unicode.org/cldr/charts/latest/supplemental/language_plural_rules.html */
 
