--- a/locales/de.strings
+++ b/locales/de.strings
@@ -1,4 +1,5 @@
 "__locale" = "de_DE.UTF-8;Deu";
+"__fallback" = "en";
 
 /* Check for https://www.unicode.org/cldr/charts/latest/supplemental/language_plural_rules.html */
 
