--- a/locales/kk.strings
+++ b/locales/kk.strings
@@ -1,4 +1,5 @@
 "__locale" = "kk_KZ.UTF-8;Kaz";
+"__fallback" = "ru";
 
 /* Check for https://www.unicode.org/cldr/charts/latest/supplemental/language_plural_rules.html */
 
