--- a/locales/tr.strings
+++ b/locales/tr.strings
@@ -1,4 +1,5 @@
 "__locale" = "tr_TR.UTF-8;Tur";
+"__fallback" = "en";
 
 /* Check for https://www.unicode.org/cldr/charts/latest/supplemental/language_plural_rules.html */
 
